@@ -663,9 +663,9 @@ void TestGCOM::test_binned_optimizer(void)
     obs.models(com_model);
 
     // Perform LM optimization
-    double fit_results[] = {83.43715, 0.157393,
-                            21.61017, 0.143873,
-                            0.001907, 8.31055e-05,
+    double fit_results[] = {83.42224, 0.157308,
+                            21.59231, 0.143873,
+                            0.001680, 8.31055e-05,
                             -2.05, 0,
                             1, 0,
                             1, 0,
@@ -678,39 +678,39 @@ void TestGCOM::test_binned_optimizer(void)
                             7, 0,
                             27.8763, 0.272976,
                             9, 0,
-                            43.6555, 0.348297,
+                            43.655553, 0.348297,
                             11, 0,
-                            54.1233, 0.396509,
+                            54.123239, 0.396509,
                             13, 0,
-                            60.9319, 0.431667,
+                            60.932307, 0.431667,
                             15, 0,
-                            65.1233, 0.457003,
+                            65.123615, 0.457003,
                             17, 0,
-                            64.8947, 0.466807,
+                            64.894558, 0.466807,
                             19, 0,
-                            60.7391, 0.458565,
+                            60.738462, 0.458565,
                             21, 0,
-                            57.5862, 0.451466,
+                            57.585619, 0.451466,
                             23, 0,
-                            54.4471, 0.441844,
+                            54.446941, 0.441844,
                             25, 0,
-                            51.9044, 0.433244,
+                            51.904248, 0.433244,
                             27, 0,
-                            49.0979, 0.422531,
+                            49.097677, 0.422531,
                             29, 0,
-                            47.1813, 0.416003,
+                            47.181030, 0.416003,
                             31, 0,
-                            44.2419, 0.406013,
+                            44.241487, 0.406013,
                             33, 0,
-                            43.1506, 0.40499,
+                            43.150204, 0.40499,
                             35, 0,
-                            41.7077, 0.403297,
+                            41.707583, 0.403297,
                             37, 0,
                             39.92,   0.39994,
                             39, 0,
-                            37.6019, 0.39392,
+                            37.6019571, 0.39392,
                             41, 0,
-                            36.7115, 0.395238,
+                            36.7115910, 0.395238,
                             43, 0,
                             35.8177, 0.397315,
                             45, 0,
@@ -718,7 +718,7 @@ void TestGCOM::test_binned_optimizer(void)
                             47, 0,
                             29.9617, 0.377506,
                             49, 0,
-                            27.9993, 0.372603};
+                            27.9992393, 0.372603};
     test_try("Perform LM optimization");
     try {
         GOptimizerLM opt;
